Fix: small ui alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,3 +142,54 @@ h1,h2,h3,h4,h5,h6,p{
     font-size: 12px;
     color: red;
 }
+@media screen and (max-width:576px){
+    .logo-mobile{
+        width:60px;
+    }
+    .title_mobile_font{
+        font-size:14px;
+    }
+    .telugu-font-mobile{
+        font-size:12px;
+    }
+    .mobile-none{
+        display:none;
+    }
+    .fs-48{
+        font-size:16px;
+    }
+    .sub-title-m{
+        font-size:10px;
+    }
+    .card-out-border:after{
+        border:0;
+    }
+    .m-mb-2{
+        margin-bottom:30px;
+    }
+    .def_p-1{
+        padding-left:12px !important;
+        padding-right:12px !important;
+    }
+    .banner-mobile-text{
+        width:100%;
+        padding-right:12px;
+    }
+    .banner-mobile-text h1, .banner-mobile-text h5{
+        text-align: right;
+    }
+    .mem-nav-pills li button {
+        min-width: 225px;
+    }
+    .mem-nav-pills{
+        flex-wrap: nowrap;
+        overflow: auto;
+    }
+    .mem-banner-1 h1{
+        font-size:15px;
+    }
+    .navbar-toggler-icon{
+        width: 23px;
+        height: 25px;
+    }
+}
